@@ -22,10 +22,14 @@ DxHeightfield.tempPlaneBuffer should probably just be a simple array. ALso check
    DxTrimeshHeightfield.tempHeightBuffer??
    DxGimpactData.check().edges
 
+Bug: Dropping first box on Heightfield is wrong.
+  -> Cylinder is also often iffy, but that is the same in C++  -> e.g. 7. cylinder (java) or 11th (c++)!
+
 Fix ENABLE_CONTACT_SORTING / Issue #22
 
 0.5.0 (unreleased)
 =====
+- Removed unnecessary ObjArray from heightfield. [#106](https://github.com/tzaeschke/ode4j/pull/106)
 - Added linter and fixed some lint. [#105](https://github.com/tzaeschke/ode4j/pull/105)
 - Cleaned up Junit 3 style tests. [#104](https://github.com/tzaeschke/ode4j/pull/104)
 - Moved tests into core/core-cpp. [#103](https://github.com/tzaeschke/ode4j/pull/103)
